# catnet

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  API_DOCUMENTATION.md  CI_CD_STATUS.md  CLAUDE-commandreference.txt  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  REMEDIATION_PLAN.md  batch_fix_all_files.py  catnet_cli.py  docker-compose.yml  error_statistics.json  final_fix.py  final_flake8_fix.py  fix_all_black_errors.py  fix_all_flake8.py  fix_all_remaining_issues.py  fix_all_syntax_errors.py  fix_black_complete.py  fix_black_errors.py  fix_black_final.py  fix_dataclass_indentation.py  fix_docstring_errors.py  fix_docstring_issues.py  fix_duplicate_docstrings.py  fix_flake8.py  fix_remaining_82_files.py  fix_syntax_errors.py  index.html  pyproject.toml  requirements.txt  (+4 more)
.claude/: settings.local.json
.github/workflows/: ci-minimal.yml  ci.yml  phase-validation.yml  test-minimal.yml  user-testing.yml
catnet_cli/: __init__.py  cli.py  client.py  config.py  utils.py
catnet_cli/commands/: __init__.py  auth.py  deploy.py  device.py  gitops.py  vault.py
config/: .env.example  README.md  alembic.ini  pytest.ini
configs/: prometheus.yml
data/: README.md
data/connection_logs/: connections_20250920.jsonl
data/deployments/: deployment_2e4abd5a-ab4b-4467-8b23-205e50329d87.json  deployment_4d5870ec-ee5a-49c2-8d1a-acda7713299d.json  deployment_d62237be-ad11-4303-8b02-850c5f809a5f.json  router1.lab.local_20250920_025923.json  router1.lab.local_20250920_030632.json  router1.lab.local_20250920_031312.json  router1.lab.local_backup_20250920_030632.cfg
data/health_checks/: 4d5870ec-ee5a-49c2-8d1a-acda7713299d_health.json
data/rollback_snapshots/: 4d5870ec-ee5a-49c2-8d1a-acda7713299d_snapshot.json
docker/: README.md
docs/: API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE-commandreference.txt  CLAUDE-readme.md  COMPLIANCE.md  CONTRIBUTING.md  GITHUB_INTEGRATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PROJECT_STRUCTURE.md  RUNBOOKS.md  SECURITY.md  SECURITY_ARCHITECTURE.md  USAGE_GUIDE.md  getting-started.md  index.md
docs/source/: conf.py  index.rst
examples/configs/: cisco_router.yml  juniper_switch.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_certificate_fields.py
remediation/: analyze_errors.py  black_errors.json  black_errors_v2.json  collect_black_errors.py  collect_black_errors_v2.py  comprehensive_fix.py  fix_duplicate_docstrings_auto.py  fix_indentation_auto.py  fix_orchestrator.py  fix_unclosed_strings_auto.py  priority_fix_list.json  priority_fix_list_v2.json  targeted_fixes.py  ultimate_comprehensive_fix.py
scripts/: catnet_cli.py  create_test_data.py  generate_ca.py  quickstart.py  validate_pipeline.py
src/: __init__.py  main.py
src/api/: auth_endpoints.py  deployment_endpoints.py  device_connection_endpoints.py  device_endpoints.py  gitops_endpoints.py  main.py  middleware.py  monitoring_endpoints.py  rollback_endpoints.py  simple_deploy_endpoints.py  simple_gitops_endpoints.py
src/auth/: __init__.py  dependencies.py  jwt_handler.py  mfa.py  oauth.py  saml.py  service.py  session.py  ssh_auth.py
src/automation/: workflows.py
src/cli/: __init__.py  auth_utils.py  commands.py
src/compliance/: __init__.py  reporting.py
src/core/: __init__.py  api_config.py  config.py  exceptions.py  logging.py  metrics.py  mtls.py  performance.py  rate_limiter.py  security_headers.py  validators.py
src/db/: __init__.py  database.py  models.py
src/deployment/: __init__.py  deployment_manager.py  executor.py  health_check.py  history.py  rollback.py  rollback_manager.py  service.py  simple_deploy.py  strategies.py  validation.py  validator.py
src/devices/: __init__.py  async_device_connector.py  cert_manager.py  cisco_handler.py  connector.py  device_connector.py  device_manager.py  device_store.py  juniper_handler.py  service.py  ssh_manager.py
src/gitops/: __init__.py  config_validator.py  git_handler.py  git_manager.py  service.py  (+6 more)
tests/: conftest.py  test_advanced_mocked.py  test_auth.py  test_automation.py  test_cli.py  test_compliance.py  test_deployment.py  test_devices.py  test_gitops.py  test_ml_anomaly.py  test_monitoring.py  test_security.py
(+63 files in other folders)
