[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catnet"
version = "1.0.0"
description = "Security-first, GitOps-enabled network configuration deployment system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CatNet Team", email = "admin@catnet.io"}
]
keywords = ["network", "automation", "gitops", "security", "cisco", "juniper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "aioredis==2.0.1",
    "pika==1.3.2",
    "aiokafka==0.10.0",
    "netmiko==4.3.0",
    "napalm==4.1.0",
    "nornir==3.4.1",
    "nornir-netmiko==1.0.1",
    "nornir-napalm==0.4.0",
    "paramiko==3.3.1",
    "aiohttp==3.9.1",
    "aiofiles==23.2.1",
    "httpx==0.25.2",
    "cryptography==41.0.7",
    "PyJWT==2.8.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "hvac==2.1.0",
    "mfa==0.1.1",
    "pyotp==2.9.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    "GitPython==3.1.40",
    "pygit2==1.13.3",
    "prometheus-client==0.19.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "click==8.1.7",
    "rich==13.7.0",
    "tenacity==8.2.3",
    "slowapi==0.1.9",
    "fastapi-cors==0.0.6",
    "qrcode==7.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "faker==21.0.0",
    "black==23.12.0",
    "mypy==1.7.1",
    "bandit==1.7.5",
    "flake8==6.1.0",
    "pylint==3.0.3",
    "ipython==8.18.1",
    "ipdb==0.13.13",
    "pre-commit==3.5.0",
]

docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
    "myst-parser==2.0.0",
]

[project.scripts]
catnet = "catnet_cli:main"
catnet-server = "src.main:main"

[project.urls]
Homepage = "https://github.com/catnet/catnet"
Documentation = "https://docs.catnet.io"
Repository = "https://github.com/catnet/catnet"
Issues = "https://github.com/catnet/catnet/issues"

[tool.setuptools]
packages = ["src", "src.api", "src.auth", "src.cli", "src.core", "src.db",
            "src.deployment", "src.devices", "src.gitops", "src.security", "src.workers"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pylint]
max-line-length = 88
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.bandit]
exclude_dirs = ["tests", "scripts/test_*.py"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88